finished navbar, basic routing, working on connecting with api

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@
   backdrop-filter: saturate(1.8) blur(20px)
 }
 
+#mainContent {
+  margin-top: 72px;
+}
+
 .text-grey-white {
   color: #ffffffa6;
 }
