--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,10 @@
 }
 
 .navbar-container {
+  z-index: 100;
   background: rgba(22, 22, 23, 0.8);
-  backdrop-filter: saturate(1.8) blur(20px)
+  backdrop-filter: saturate(1.8) blur(20px);
+  -webkit-backdrop-filter: saturate(1.8) blur(20px);
 }
 
 #mainContent {
